# NSF_IRES_Tutorial

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md
cmake/Modules/: lets_test_some_stuffConfig.cmake
code/: README.md  code.kdev4
code/.kdev4/: code.kdev4
code/docs/doxygen/: Doxyfile.in
code/docs/doxygen/other/: group_defs.dox  main_page.dox
code/grc/: CMakeLists.txt  lets_test_some_stuff_taggedFileSource.xml  lets_test_some_stuff_taggedHeader.xml  lets_test_some_stuff_taggedHeaderParser.xml  lets_test_some_stuff_taggedPacketGate.xml
code/include/lets_test_some_stuff/: CMakeLists.txt  api.h  taggedFileSource.h  taggedHeader.h  taggedHeaderParser.h
code/lib/: CMakeLists.txt  qa_lets_test_some_stuff.cc  taggedAccessCode_impl.cc  taggedAccessCode_impl.h  taggedFileSource_impl.cc  taggedFileSource_impl.h  taggedHeaderParser_impl.cc  taggedHeaderParser_impl.h  taggedHeader_impl.cc  taggedHeader_impl.h  taggedPacketGate_impl.cc  taggedPacketGate_impl.h  test_lets_test_some_stuff.cc
code/python/: CMakeLists.txt  __init__.py
code/swig/: CMakeLists.txt  lets_test_some_stuff_swig.i
confs/: readme.txt
confs/gnuradio_conf/: config.conf  grc.conf
docs/: README.lets_test_some_stuff
flowgraphs/: audioRx.grc  audioTx.grc  imageRx.grc  imageRxDBG.grc  imageTransmission.grc  imageTx.grc  readme.md  redoneStereo.grc  stereoAudio.grc  stereoAudio_rev_1.grc  stereoAudio_rev_2.grc  stereoRx.grc  stereoRx_and_Tx.grc  stereoSimulation.grc  stereoTx.grc  top_block.py  untitled.grc
grc/: CMakeLists.txt  lets_test_some_stuff_taggedAccessCode.xml
include/lets_test_some_stuff/: taggedAccessCode.h  taggedFileSource.h  taggedHeader.h  taggedPacketGate.h
lib/: qa_lets_test_some_stuff.h  taggedAccessCode_impl.cc  taggedFileSource_impl.h
